External navigation demo fixed timeline overflow

--- a/mobiscroll-demos-react/src/demos/eventcalendar/timeline/external-navigation/external-navigation.css
+++ b/mobiscroll-demos-react/src/demos/eventcalendar/timeline/external-navigation/external-navigation.css
@@ -8,6 +8,7 @@
 
 .mds-external-nav-ec {
   border-left: 1px solid #ccc;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 700px) {
